# mcmc_cpp

./: .gitignore  CMakeLists.txt  README.md
data/: my_secret_key.txt  output_this_is_water.txt  secret_message.txt  secret_message_2.txt  this_is_water.txt
include/: deciphering_utils.hpp  metropolis_hastings.hpp  utils.hpp
src/: deciphering_utils.cpp  metropolis_hastings.cpp  run_deciphering.cpp  scramble_text.cpp  utils.cpp
